--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-02 02:46 -->
+<!-- 2022-12-02 20:19 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,28 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org93fc330">1. 推送</a></li>
-<li><a href="#orgf13ded5">2. Git</a></li>
-<li><a href="#org7396db1">3. XBox</a></li>
-<li><a href="#org93ddded">4. Bilibili</a></li>
+<li><a href="#org580532d">1. 笔记</a></li>
+<li><a href="#orgdc2ad86">2. 推送</a></li>
+<li><a href="#orge8ff655">3. Git</a></li>
+<li><a href="#orgbe01ef7">4. XBox</a></li>
+<li><a href="#org41baa13">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org93fc330" class="outline-2">
-<h2 id="org93fc330"><span class="section-number-2">1.</span> <a href="#org93fc330">推送</a></h2>
+<div id="outline-container-org580532d" class="outline-2">
+<h2 id="org580532d"><span class="section-number-2">1.</span> <a href="#org580532d">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
+<ul class="org-ul">
+<li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-orgdc2ad86" class="outline-2">
+<h2 id="orgdc2ad86"><span class="section-number-2">2.</span> <a href="#orgdc2ad86">推送</a></h2>
+<div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
 使用 HTTP POST 发布推送, 有不同的 topic.
@@ -65,9 +75,9 @@
 </div>
 </div>
 
-<div id="outline-container-orgf13ded5" class="outline-2">
-<h2 id="orgf13ded5"><span class="section-number-2">2.</span> <a href="#orgf13ded5">Git</a></h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-orge8ff655" class="outline-2">
+<h2 id="orge8ff655"><span class="section-number-2">3.</span> <a href="#orge8ff655">Git</a></h2>
+<div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
 可视化 Git 历史, 很有意思
@@ -80,9 +90,9 @@
 </div>
 </div>
 
-<div id="outline-container-org7396db1" class="outline-2">
-<h2 id="org7396db1"><span class="section-number-2">3.</span> <a href="#org7396db1">XBox</a></h2>
-<div class="outline-text-2" id="text-3">
+<div id="outline-container-orgbe01ef7" class="outline-2">
+<h2 id="orgbe01ef7"><span class="section-number-2">4.</span> <a href="#orgbe01ef7">XBox</a></h2>
+<div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
 <ul class="org-ul">
@@ -92,9 +102,9 @@
 </div>
 </div>
 
-<div id="outline-container-org93ddded" class="outline-2">
-<h2 id="org93ddded"><span class="section-number-2">4.</span> <a href="#org93ddded">Bilibili</a></h2>
-<div class="outline-text-2" id="text-4">
+<div id="outline-container-org41baa13" class="outline-2">
+<h2 id="org41baa13"><span class="section-number-2">5.</span> <a href="#org41baa13">Bilibili</a></h2>
+<div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
 <li><a href="https://github.com/BililiveRecorder/BililiveRecorder">B站录播姬</a> 直播录制</li>
@@ -106,8 +116,8 @@
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-30 11:13</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 02:46</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:18</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 20:19</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
