--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-02 20:19 -->
+<!-- 2022-12-02 20:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org56939e1">1. What is Vectored IO</a></li>
-<li><a href="#org253059a">2. Vectored IO in Linux</a></li>
-<li><a href="#org21adf4f">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org6da089b">4. Examples</a>
+<li><a href="#org86619c4">1. What is Vectored IO</a></li>
+<li><a href="#orgf0aeccd">2. Vectored IO in Linux</a></li>
+<li><a href="#org70a4479">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org8ae99a8">4. Examples</a>
 <ul>
-<li><a href="#org03dc565">4.1. <code>write()</code></a></li>
-<li><a href="#orgf18acbc">4.2. <code>writev()</code></a></li>
+<li><a href="#orgbe58ffb">4.1. <code>write()</code></a></li>
+<li><a href="#orgd8b2803">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org56939e1" class="outline-2">
-<h2 id="org56939e1"><span class="section-number-2">1.</span> <a href="#org56939e1">What is Vectored IO</a></h2>
+<div id="outline-container-org86619c4" class="outline-2">
+<h2 id="org86619c4"><span class="section-number-2">1.</span> <a href="#org86619c4">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org253059a" class="outline-2">
-<h2 id="org253059a"><span class="section-number-2">2.</span> <a href="#org253059a">Vectored IO in Linux</a></h2>
+<div id="outline-container-orgf0aeccd" class="outline-2">
+<h2 id="orgf0aeccd"><span class="section-number-2">2.</span> <a href="#orgf0aeccd">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org21adf4f" class="outline-2">
-<h2 id="org21adf4f"><span class="section-number-2">3.</span> <a href="#org21adf4f">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org70a4479" class="outline-2">
+<h2 id="org70a4479"><span class="section-number-2">3.</span> <a href="#org70a4479">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org6da089b" class="outline-2">
-<h2 id="org6da089b"><span class="section-number-2">4.</span> <a href="#org6da089b">Examples</a></h2>
+<div id="outline-container-org8ae99a8" class="outline-2">
+<h2 id="org8ae99a8"><span class="section-number-2">4.</span> <a href="#org8ae99a8">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org03dc565" class="outline-3">
-<h3 id="org03dc565"><span class="section-number-3">4.1.</span> <a href="#org03dc565"><code>write()</code></a></h3>
+<div id="outline-container-orgbe58ffb" class="outline-3">
+<h3 id="orgbe58ffb"><span class="section-number-3">4.1.</span> <a href="#orgbe58ffb"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orgf18acbc" class="outline-3">
-<h3 id="orgf18acbc"><span class="section-number-3">4.2.</span> <a href="#orgf18acbc"><code>writev()</code></a></h3>
+<div id="outline-container-orgd8b2803" class="outline-3">
+<h3 id="orgd8b2803"><span class="section-number-3">4.2.</span> <a href="#orgd8b2803"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 20:19</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 20:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
