Update from https://github.com/thebesttv/eserver-static/commit/f83c1dbfb221a2a5d71e36984f8398a062e75c95

--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-02 20:42 -->
+<!-- 2022-12-02 22:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1c40226">1. 笔记</a></li>
-<li><a href="#org571b72f">2. 推送</a></li>
-<li><a href="#org3d045f1">3. Git</a></li>
-<li><a href="#org5e86e99">4. XBox</a></li>
-<li><a href="#org57fa692">5. Bilibili</a></li>
+<li><a href="#org7cba0fa">1. 笔记</a></li>
+<li><a href="#org09521bc">2. 推送</a></li>
+<li><a href="#org9af95e8">3. Git</a></li>
+<li><a href="#org07bcebf">4. XBox</a></li>
+<li><a href="#orgfca9df0">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org1c40226" class="outline-2">
-<h2 id="org1c40226"><span class="section-number-2">1.</span> <a href="#org1c40226">笔记</a></h2>
+<div id="outline-container-org7cba0fa" class="outline-2">
+<h2 id="org7cba0fa"><span class="section-number-2">1.</span> <a href="#org7cba0fa">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-org571b72f" class="outline-2">
-<h2 id="org571b72f"><span class="section-number-2">2.</span> <a href="#org571b72f">推送</a></h2>
+<div id="outline-container-org09521bc" class="outline-2">
+<h2 id="org09521bc"><span class="section-number-2">2.</span> <a href="#org09521bc">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-org3d045f1" class="outline-2">
-<h2 id="org3d045f1"><span class="section-number-2">3.</span> <a href="#org3d045f1">Git</a></h2>
+<div id="outline-container-org9af95e8" class="outline-2">
+<h2 id="org9af95e8"><span class="section-number-2">3.</span> <a href="#org9af95e8">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-org5e86e99" class="outline-2">
-<h2 id="org5e86e99"><span class="section-number-2">4.</span> <a href="#org5e86e99">XBox</a></h2>
+<div id="outline-container-org07bcebf" class="outline-2">
+<h2 id="org07bcebf"><span class="section-number-2">4.</span> <a href="#org07bcebf">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org57fa692" class="outline-2">
-<h2 id="org57fa692"><span class="section-number-2">5.</span> <a href="#org57fa692">Bilibili</a></h2>
+<div id="outline-container-orgfca9df0" class="outline-2">
+<h2 id="orgfca9df0"><span class="section-number-2">5.</span> <a href="#orgfca9df0">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:18</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 20:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 22:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
