--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-02 20:42 -->
+<!-- 2022-12-02 22:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga62b0b2">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orga153098">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#orgccbb668">1.1. window config &amp; register</a></li>
-<li><a href="#org7610c2f">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orgd1f523a">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org18b3485">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orgdca0c9b">1.1. window config &amp; register</a></li>
+<li><a href="#orgc16d1d5">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orga633bd9">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org524288f">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orga62b0b2" class="outline-2">
-<h2 id="orga62b0b2"><span class="section-number-2">1.</span> <a href="#orga62b0b2">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orga153098" class="outline-2">
+<h2 id="orga153098"><span class="section-number-2">1.</span> <a href="#orga153098">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgccbb668" class="outline-3">
-<h3 id="orgccbb668"><span class="section-number-3">1.1.</span> <a href="#orgccbb668">window config &amp; register</a></h3>
+<div id="outline-container-orgdca0c9b" class="outline-3">
+<h3 id="orgdca0c9b"><span class="section-number-3">1.1.</span> <a href="#orgdca0c9b">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org7610c2f" class="outline-3">
-<h3 id="org7610c2f"><span class="section-number-3">1.2.</span> <a href="#org7610c2f"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgc16d1d5" class="outline-3">
+<h3 id="orgc16d1d5"><span class="section-number-3">1.2.</span> <a href="#orgc16d1d5"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgd1f523a" class="outline-3">
-<h3 id="orgd1f523a"><span class="section-number-3">1.3.</span> <a href="#orgd1f523a"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orga633bd9" class="outline-3">
+<h3 id="orga633bd9"><span class="section-number-3">1.3.</span> <a href="#orga633bd9"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org18b3485" class="outline-3">
-<h3 id="org18b3485"><span class="section-number-3">1.4.</span> <a href="#org18b3485"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org524288f" class="outline-3">
+<h3 id="org524288f"><span class="section-number-3">1.4.</span> <a href="#org524288f"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 20:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 22:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
