--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-02 20:42 -->
+<!-- 2022-12-02 22:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1784f18">1. 妙妙文章</a>
+<li><a href="#org03b93a7">1. 妙妙文章</a>
 <ul>
-<li><a href="#org04b0e48">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org979fd4e">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgc41d567">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org30db86e">1.4. 关于编辑器</a></li>
-<li><a href="#orgfe8ce83">1.5. 关于代码</a>
+<li><a href="#org37d1a59">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgcb1b02c">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org728b4d1">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org50a37c8">1.4. 关于编辑器</a></li>
+<li><a href="#orgfd85aec">1.5. 关于代码</a>
 <ul>
-<li><a href="#org8dc289f">1.5.1. Lisp</a></li>
+<li><a href="#orgeca6f9d">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org5864c47">1.6. 关于CPU</a></li>
-<li><a href="#orgf6a8893">1.7. 关于算法</a>
+<li><a href="#org860a733">1.6. 关于CPU</a></li>
+<li><a href="#org5426f2e">1.7. 关于算法</a>
 <ul>
-<li><a href="#org44ace89">1.7.1. 关于随机</a></li>
+<li><a href="#org50befc2">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org04941c8">1.8. 关于AI</a></li>
-<li><a href="#orgb972f11">1.9. 关于软件</a>
+<li><a href="#org731b3d4">1.8. 关于AI</a></li>
+<li><a href="#orga933e40">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgf79b65b">1.9.1. SQLite</a></li>
+<li><a href="#org51c63d4">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org11fdfb6">1.10. 关于workflow</a></li>
+<li><a href="#org4f2ddb0">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgad0d309">2. 棒棒视频</a>
+<li><a href="#org6941d47">2. 棒棒视频</a>
 <ul>
-<li><a href="#org67331e1">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org5f77634">2.2. 迷因水母</a></li>
-<li><a href="#org2047d71">2.3. 各种剧</a></li>
-<li><a href="#orgea92417">2.4. 电影</a></li>
+<li><a href="#org413d964">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgebd37b6">2.2. 迷因水母</a></li>
+<li><a href="#org5158c22">2.3. 各种剧</a></li>
+<li><a href="#orgece2c7d">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgc3fa40d">3. 快乐游戏</a></li>
-<li><a href="#org8b952a7">4. 宝藏博主</a></li>
-<li><a href="#org6327a8d">5. 有意思的</a>
+<li><a href="#org2962c19">3. 快乐游戏</a></li>
+<li><a href="#org0d4b64d">4. 宝藏博主</a></li>
+<li><a href="#orgca14c2a">5. 有意思的</a>
 <ul>
-<li><a href="#org26b5289">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgc665363">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orgfdbdb76">6. 我想玩的</a></li>
+<li><a href="#org69c68ea">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org1784f18" class="outline-2">
-<h2 id="org1784f18"><span class="section-number-2">1.</span> <a href="#org1784f18">妙妙文章</a></h2>
+<div id="outline-container-org03b93a7" class="outline-2">
+<h2 id="org03b93a7"><span class="section-number-2">1.</span> <a href="#org03b93a7">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -432,7 +432,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgf5ff872">
+<figure id="org018ecf1">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -505,8 +505,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-org04b0e48" class="outline-3">
-<h3 id="org04b0e48"><span class="section-number-3">1.1.</span> <a href="#org04b0e48">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org37d1a59" class="outline-3">
+<h3 id="org37d1a59"><span class="section-number-3">1.1.</span> <a href="#org37d1a59">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -547,8 +547,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-org979fd4e" class="outline-3">
-<h3 id="org979fd4e"><span class="section-number-3">1.2.</span> <a href="#org979fd4e">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgcb1b02c" class="outline-3">
+<h3 id="orgcb1b02c"><span class="section-number-3">1.2.</span> <a href="#orgcb1b02c">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -582,8 +582,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgc41d567" class="outline-3">
-<h3 id="orgc41d567"><span class="section-number-3">1.3.</span> <a href="#orgc41d567">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org728b4d1" class="outline-3">
+<h3 id="org728b4d1"><span class="section-number-3">1.3.</span> <a href="#org728b4d1">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -617,8 +617,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org30db86e" class="outline-3">
-<h3 id="org30db86e"><span class="section-number-3">1.4.</span> <a href="#org30db86e">关于编辑器</a></h3>
+<div id="outline-container-org50a37c8" class="outline-3">
+<h3 id="org50a37c8"><span class="section-number-3">1.4.</span> <a href="#org50a37c8">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -634,8 +634,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgfe8ce83" class="outline-3">
-<h3 id="orgfe8ce83"><span class="section-number-3">1.5.</span> <a href="#orgfe8ce83">关于代码</a></h3>
+<div id="outline-container-orgfd85aec" class="outline-3">
+<h3 id="orgfd85aec"><span class="section-number-3">1.5.</span> <a href="#orgfd85aec">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -660,8 +660,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org8dc289f" class="outline-4">
-<h4 id="org8dc289f"><span class="section-number-4">1.5.1.</span> <a href="#org8dc289f">Lisp</a></h4>
+<div id="outline-container-orgeca6f9d" class="outline-4">
+<h4 id="orgeca6f9d"><span class="section-number-4">1.5.1.</span> <a href="#orgeca6f9d">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -684,8 +684,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org5864c47" class="outline-3">
-<h3 id="org5864c47"><span class="section-number-3">1.6.</span> <a href="#org5864c47">关于CPU</a></h3>
+<div id="outline-container-org860a733" class="outline-3">
+<h3 id="org860a733"><span class="section-number-3">1.6.</span> <a href="#org860a733">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -700,8 +700,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgf6a8893" class="outline-3">
-<h3 id="orgf6a8893"><span class="section-number-3">1.7.</span> <a href="#orgf6a8893">关于算法</a></h3>
+<div id="outline-container-org5426f2e" class="outline-3">
+<h3 id="org5426f2e"><span class="section-number-3">1.7.</span> <a href="#org5426f2e">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -720,8 +720,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org44ace89" class="outline-4">
-<h4 id="org44ace89"><span class="section-number-4">1.7.1.</span> <a href="#org44ace89">关于随机</a></h4>
+<div id="outline-container-org50befc2" class="outline-4">
+<h4 id="org50befc2"><span class="section-number-4">1.7.1.</span> <a href="#org50befc2">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org04941c8" class="outline-3">
-<h3 id="org04941c8"><span class="section-number-3">1.8.</span> <a href="#org04941c8">关于AI</a></h3>
+<div id="outline-container-org731b3d4" class="outline-3">
+<h3 id="org731b3d4"><span class="section-number-3">1.8.</span> <a href="#org731b3d4">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb972f11" class="outline-3">
-<h3 id="orgb972f11"><span class="section-number-3">1.9.</span> <a href="#orgb972f11">关于软件</a></h3>
+<div id="outline-container-orga933e40" class="outline-3">
+<h3 id="orga933e40"><span class="section-number-3">1.9.</span> <a href="#orga933e40">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -758,8 +758,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgf79b65b" class="outline-4">
-<h4 id="orgf79b65b"><span class="section-number-4">1.9.1.</span> <a href="#orgf79b65b">SQLite</a></h4>
+<div id="outline-container-org51c63d4" class="outline-4">
+<h4 id="org51c63d4"><span class="section-number-4">1.9.1.</span> <a href="#org51c63d4">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org11fdfb6" class="outline-3">
-<h3 id="org11fdfb6"><span class="section-number-3">1.10.</span> <a href="#org11fdfb6">关于workflow</a></h3>
+<div id="outline-container-org4f2ddb0" class="outline-3">
+<h3 id="org4f2ddb0"><span class="section-number-3">1.10.</span> <a href="#org4f2ddb0">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -784,8 +784,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgad0d309" class="outline-2">
-<h2 id="orgad0d309"><span class="section-number-2">2.</span> <a href="#orgad0d309">棒棒视频</a></h2>
+<div id="outline-container-org6941d47" class="outline-2">
+<h2 id="org6941d47"><span class="section-number-2">2.</span> <a href="#org6941d47">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -844,8 +844,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org67331e1" class="outline-3">
-<h3 id="org67331e1"><span class="section-number-3">2.1.</span> <a href="#org67331e1">Veritasium 真理元素</a></h3>
+<div id="outline-container-org413d964" class="outline-3">
+<h3 id="org413d964"><span class="section-number-3">2.1.</span> <a href="#org413d964">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -876,8 +876,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org5f77634" class="outline-3">
-<h3 id="org5f77634"><span class="section-number-3">2.2.</span> <a href="#org5f77634">迷因水母</a></h3>
+<div id="outline-container-orgebd37b6" class="outline-3">
+<h3 id="orgebd37b6"><span class="section-number-3">2.2.</span> <a href="#orgebd37b6">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -892,8 +892,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org2047d71" class="outline-3">
-<h3 id="org2047d71"><span class="section-number-3">2.3.</span> <a href="#org2047d71">各种剧</a></h3>
+<div id="outline-container-org5158c22" class="outline-3">
+<h3 id="org5158c22"><span class="section-number-3">2.3.</span> <a href="#org5158c22">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -917,8 +917,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgea92417" class="outline-3">
-<h3 id="orgea92417"><span class="section-number-3">2.4.</span> <a href="#orgea92417">电影</a></h3>
+<div id="outline-container-orgece2c7d" class="outline-3">
+<h3 id="orgece2c7d"><span class="section-number-3">2.4.</span> <a href="#orgece2c7d">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -944,7 +944,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgf353e0e">
+<figure id="org2192702">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -962,8 +962,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgc3fa40d" class="outline-2">
-<h2 id="orgc3fa40d"><span class="section-number-2">3.</span> <a href="#orgc3fa40d">快乐游戏</a></h2>
+<div id="outline-container-org2962c19" class="outline-2">
+<h2 id="org2962c19"><span class="section-number-2">3.</span> <a href="#org2962c19">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -993,8 +993,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8b952a7" class="outline-2">
-<h2 id="org8b952a7"><span class="section-number-2">4.</span> <a href="#org8b952a7">宝藏博主</a></h2>
+<div id="outline-container-org0d4b64d" class="outline-2">
+<h2 id="org0d4b64d"><span class="section-number-2">4.</span> <a href="#org0d4b64d">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1005,7 +1005,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgcf67c52">
+<figure id="org7fbd1aa">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1013,8 +1013,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6327a8d" class="outline-2">
-<h2 id="org6327a8d"><span class="section-number-2">5.</span> <a href="#org6327a8d">有意思的</a></h2>
+<div id="outline-container-orgca14c2a" class="outline-2">
+<h2 id="orgca14c2a"><span class="section-number-2">5.</span> <a href="#orgca14c2a">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1040,8 +1040,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org26b5289" class="outline-3">
-<h3 id="org26b5289"><span class="section-number-3">5.1.</span> <a href="#org26b5289">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgc665363" class="outline-3">
+<h3 id="orgc665363"><span class="section-number-3">5.1.</span> <a href="#orgc665363">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1053,8 +1053,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgfdbdb76" class="outline-2">
-<h2 id="orgfdbdb76"><span class="section-number-2">6.</span> <a href="#orgfdbdb76">我想玩的</a></h2>
+<div id="outline-container-org69c68ea" class="outline-2">
+<h2 id="org69c68ea"><span class="section-number-2">6.</span> <a href="#org69c68ea">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1077,7 +1077,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:41</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 20:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 22:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
