--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-02 20:42 -->
+<!-- 2022-12-02 22:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org322f7fd">1. 暑假</a>
+<li><a href="#org5a823ce">1. 暑假</a>
 <ul>
-<li><a href="#org325df81">1.1. 夏令营</a></li>
+<li><a href="#orgfbf5672">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orga2cdb0e">2. 打工</a></li>
-<li><a href="#orgac6a6fb">3. 我的928</a>
+<li><a href="#orge9df643">2. 打工</a></li>
+<li><a href="#orgfe96588">3. 我的928</a>
 <ul>
-<li><a href="#org4de552e">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org0393557">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgbec59e3">4. 他们的928</a></li>
-<li><a href="#orgfb253ec">5. 总结</a></li>
+<li><a href="#org73d83f9">4. 他们的928</a></li>
+<li><a href="#org78bc655">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orge1570e8">
+<figure id="org817ac09">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org322f7fd" class="outline-2">
-<h2 id="org322f7fd"><span class="section-number-2">1.</span> <a href="#org322f7fd">暑假</a></h2>
+<div id="outline-container-org5a823ce" class="outline-2">
+<h2 id="org5a823ce"><span class="section-number-2">1.</span> <a href="#org5a823ce">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org325df81" class="outline-3">
-<h3 id="org325df81"><span class="section-number-3">1.1.</span> <a href="#org325df81">夏令营</a></h3>
+<div id="outline-container-orgfbf5672" class="outline-3">
+<h3 id="orgfbf5672"><span class="section-number-3">1.1.</span> <a href="#orgfbf5672">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga2cdb0e" class="outline-2">
-<h2 id="orga2cdb0e"><span class="section-number-2">2.</span> <a href="#orga2cdb0e">打工</a></h2>
+<div id="outline-container-orge9df643" class="outline-2">
+<h2 id="orge9df643"><span class="section-number-2">2.</span> <a href="#orge9df643">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgac6a6fb" class="outline-2">
-<h2 id="orgac6a6fb"><span class="section-number-2">3.</span> <a href="#orgac6a6fb">我的928</a></h2>
+<div id="outline-container-orgfe96588" class="outline-2">
+<h2 id="orgfe96588"><span class="section-number-2">3.</span> <a href="#orgfe96588">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org4de552e" class="outline-3">
-<h3 id="org4de552e"><span class="section-number-3">3.1.</span> <a href="#org4de552e">928演唱会(bushi</a></h3>
+<div id="outline-container-org0393557" class="outline-3">
+<h3 id="org0393557"><span class="section-number-3">3.1.</span> <a href="#org0393557">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orga8e2034">
+<figure id="orgd55e2c0">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org182bcaf">
+<figure id="orgfb18845">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgbec59e3" class="outline-2">
-<h2 id="orgbec59e3"><span class="section-number-2">4.</span> <a href="#orgbec59e3">他们的928</a></h2>
+<div id="outline-container-org73d83f9" class="outline-2">
+<h2 id="org73d83f9"><span class="section-number-2">4.</span> <a href="#org73d83f9">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgfb253ec" class="outline-2">
-<h2 id="orgfb253ec"><span class="section-number-2">5.</span> <a href="#orgfb253ec">总结</a></h2>
+<div id="outline-container-org78bc655" class="outline-2">
+<h2 id="org78bc655"><span class="section-number-2">5.</span> <a href="#org78bc655">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 20:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-02 22:07</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
